# tokopedia-scraper

./: .dockerignore  .gitignore  .gitmodules  API_GUIDE.md  Dockerfile  LICENSE  README.md  README_GraphQL.md  Seller_rows.csv  api_service.py  csv_writer.py  pyproject.toml  regenerate_csv.py  start_api.sh  tokopedia_cli.py  tokopedia_graphql.py  tokopedia_simple_cli.py  tokopedia_unified_formatter.py
api/: __init__.py  main.py
common/: __init__.py  config.py  job_metadata.py  logger.py  path_utils.py
results/: tokopedia_iphone_20250808_1754597039.json  tokopedia_iphone_20250819_1755572125.json  tokopedia_iphone_20250819_1755572138.json  tokopedia_oppo_20250819_1755569452.json  tokopedia_samsung_20250808_1754597413.json  tokopedia_samsung_20250808_1754599162.json
results/jobs/6313d067-8c2a-48ad-9ab7-34be22cef963/: job_metadata.json
results/jobs/996ce68b-c299-4e04-bf9c-8756d8dc7b87/: job_metadata.json
storage/request_queues/default/: JqpdDXWHHmhBqEh.json  __metadata__.json
test_results/: unified_listings.csv
tests/: test_api.py
